# slow-takeoff

./: .clinerules  .env.example  .gitignore  CLINE.md  README-nextchat.md  README.md  analysis_report.md  app.py  call_wealtharc_endpoints.py  create_notebook.py  dashboard_agent.py  docker-compose.yml  fetch_paginated_portfolios.py  fetch_paginated_transactions.py  openai_docs.md  process_asset_data.py  register_dashboard_tool.py  requirements.txt  run_dashboard_agent.py  run_pipeline.py  run_stonk_agent.py  setup-nextchat.sh  system_prompt.txt  test_agents_import.py  test_gateway.py  test_google_scrape.py  test_ingestion.py  wealtharc_client.py
custom-nextchat-files/: README.md
dashboard/: tailwind.config.mjs
docs/: report_framework_design.md  tasks.md
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
scripts/: analyze_sample_data.py  analyze_wealtharc_data.py  call_wealtharc_endpoints.py  fetch_assets_sample_paginated.py  fetch_paginated_assets.py  (+2 more)
wealtharc-turbo-er/: .gitignore  README.md  pyproject.toml
wealtharc-turbo-er/wa/: aggregator.py  config.py  db.py  er.py
wealtharc-turbo-er/wa/demo/: demo.ipynb  streamlit_app.py
wealtharc-turbo-er/wa/ingest/: alpha_vantage.py  coingecko.py  companies_house.py  ecb_sdw.py  eia.py  epo.py  esg_book.py  figi.py  finnhub.py  fred.py  gdelt.py  google_trends.py  iexcloud.py  imf.py  newsapi.py  ofac.py  openexchangerates.py  quandl_lme.py  reddit.py  sec_edgar.py  stocktwits.py  twitter.py  uspto.py  wikimedia.py  world_bank.py
(+44 files in other folders)
